--- a/crewportal.plist
+++ b/crewportal.plist
@@ -27,7 +27,7 @@
 					<key>needs-shine</key>
 					<false/>
 					<key>url</key>
-					<string>https://foc.sf-express.com/iPadApp/MAOC/MAOC.png</string>
+					<string></string>
 				</dict>
 			</array>
 			<key>metadata</key>
